consider cleared check

--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -120,6 +120,7 @@
     "head": "Settlement",
     "check": "Check",
     "balance": "Balance",
-    "shouldPay": "Should pay"
+    "shouldPay": "Should pay",
+    "isCleared": "All bills are cleared"
   }
 }
