implement check feature

--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -93,8 +93,7 @@
     "wrongCode": "Wrong Code"
   },
   "editTx": {
-    "backToList": "Back",
-    "backToTx": "Back",
+    "back": "Back",
     "type": "Type",
     "date": "Date",
     "descr": "Item",
