--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -6,7 +6,8 @@
     "cancel": "取消",
     "submit": "送出",
     "delete": "删除",
-    "reset": "重置"
+    "reset": "重置",
+    "back": "回上页"
   },
   "desc": {
     "in": "收入",
@@ -93,7 +94,6 @@
     "wrongCode": "错误的通行码"
   },
   "editTx": {
-    "back": "回上页",
     "type": "类别",
     "date": "日期",
     "descr": "项目",
