--- a/frontend/public/locale/zh-TW/common.json
+++ b/frontend/public/locale/zh-TW/common.json
@@ -6,7 +6,8 @@
     "cancel": "取消",
     "submit": "送出",
     "delete": "刪除",
-    "reset": "重置"
+    "reset": "重置",
+    "back": "回上頁"
   },
   "desc": {
     "in": "收入",
@@ -93,7 +94,6 @@
     "wrongCode": "錯誤的通行碼"
   },
   "editTx": {
-    "back": "回上頁",
     "type": "類別",
     "date": "日期",
     "descr": "項目",
