improve balance page and add loadmore component

--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -7,7 +7,8 @@
     "submit": "Submit",
     "delete": "Delete",
     "reset": "Reset",
-    "back": "Back"
+    "back": "Back",
+    "loadMore": "Load More"
   },
   "desc": {
     "in": "Income",
