--- a/frontend/public/locale/zh-TW/common.json
+++ b/frontend/public/locale/zh-TW/common.json
@@ -7,7 +7,8 @@
     "submit": "送出",
     "delete": "刪除",
     "reset": "重置",
-    "back": "回上頁"
+    "back": "回上頁",
+    "loadMore": "讀取更多"
   },
   "desc": {
     "in": "收入",
