--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -1,5 +1,4 @@
 {
-  "appName": "Bitop",
   "language": "简体中文",
   "act": {
     "confirm": "确认",
@@ -19,6 +18,14 @@
     "sender": "汇款者",
     "receiver": "收款者",
     "memo": "备註"
+  },
+  "landing": {
+    "title": "Bi-ll 必有分帐",
+    "subtitle": "为你轻松算好每一笔费用",
+    "start": "开始使用",
+    "featureLogin": "免登入",
+    "featurePwa": "只需将网站「加入主画面」即可随时使用",
+    "featureEasy": "介面友善易上手"
   },
   "bookList": {
     "bookList": "帐本清单",
