modify book list and add system setting page

--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -33,6 +33,11 @@
     "noBook": "No Book",
     "name": "Name"
   },
+  "systemSetting": {
+    "back": "Back",
+    "head": "System Setting",
+    "language": "Language"
+  },
   "bookDetail": {
     "back": "Back",
     "totalOut": "Total Expense",
