--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -33,6 +33,11 @@
     "noBook": "尚未建立帐本",
     "name": "名称"
   },
+  "systemSetting": {
+    "back": "回帐本清单",
+    "head": "系统设定",
+    "language": "语言设定"
+  },
   "bookDetail": {
     "back": "回清单",
     "totalOut": "总支出",
