--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -6,6 +6,7 @@
     "submit": "Submit",
     "delete": "Delete",
     "reset": "Reset",
+    "clear": "Clear",
     "back": "Back",
     "loadMore": "Load More"
   },
