--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -6,6 +6,7 @@
     "submit": "送出",
     "delete": "删除",
     "reset": "重置",
+    "clear": "清除",
     "back": "回上页",
     "loadMore": "读取更多"
   },
@@ -41,7 +42,7 @@
     "contactUs": "联络我们"
   },
   "add2HomeScreen": {
-    "back": "Back",
+    "back": "回系统设定",
     "iosStep1": "使用 Safari 打开本网站，并点选画面下方的分享图示",
     "iosStep2": "选择「加入主画面」",
     "iosStep3": "按下右上角「新增」",
