--- a/frontend/public/locale/zh-TW/common.json
+++ b/frontend/public/locale/zh-TW/common.json
@@ -6,6 +6,7 @@
     "submit": "送出",
     "delete": "刪除",
     "reset": "重置",
+    "clear": "清除",
     "back": "回上頁",
     "loadMore": "讀取更多"
   },
@@ -41,7 +42,7 @@
     "contactUs": "聯絡我們"
   },
   "add2HomeScreen": {
-    "back": "Back",
+    "back": "回系統設定",
     "iosStep1": "使用 Safari 打開本網站，並點選畫面下方的分享圖示",
     "iosStep2": "選擇「加入主畫面」",
     "iosStep3": "按下右上角「新增」",
