change domain name

--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -22,7 +22,7 @@
     "memo": "Memo"
   },
   "landing": {
-    "title": "Bi-ll",
+    "title": "Bunny Bill",
     "subtitle": "Let's Split the Bill easily",
     "start": "Get started",
     "featureLogin": "Login free",
@@ -50,7 +50,7 @@
     "androidStep1": "Open this site in Chrome and click on the \"More\" icon at the top right of the screen",
     "androidStep2": "Select \"Add to Home Screen\"",
     "androidStep3": "Click \"Add\" on the small screen",
-    "done": "After completing the above steps, you can see the icon of Bi-ll on the main screen of the phone"
+    "done": "After completing the above steps, you can see the icon of Bunny Bill on the main screen of the phone"
   },
   "bookDetail": {
     "back": "Back",
