--- a/frontend/public/locale/zh-TW/common.json
+++ b/frontend/public/locale/zh-TW/common.json
@@ -109,9 +109,9 @@
     "nickname": "暱稱",
     "noMemberHint": "尚未有成員，請輸入暱稱來新增成員吧！",
     "shareWithFriend": "與好友共享",
-    "scanHint": "讓好友掃描此 QR Code 或",
+    "shareText": "與你共享帳本「{{book}}」，請於點擊連結後輸入通行碼",
     "shareLink": "分享連結",
-    "codeHint": "並輸入通行碼：",
+    "codeHint": "通行碼：",
     "edit": "編輯資料",
     "deleteHint": "要刪除「{{nickname}}」嗎？"
   },
