--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -41,6 +41,7 @@
     "back": "回帐本清单",
     "head": "系统设定",
     "language": "语言设定",
+    "myId": "我的 ID",
     "add2HomeScreen": "加入手机主画面",
     "contactUs": "联络我们"
   },
@@ -110,15 +111,17 @@
     "create": "新增",
     "nickname": "暱称",
     "noMemberHint": "尚未有成员，请输入暱称来新增成员吧！",
-    "shareWithFriend": "与好友共享",
-    "shareText": "与你共享帐本「{{book}}」，请于点击连结后输入通行码",
+    "shareWithFriend": "与好友共享帐本",
+    "shareText": "与你共享帐本「{{book}}」，请点击连结",
     "shareLink": "分享连结",
-    "codeHint": "通行码：",
+    "inputId": "输入好友 ID",
     "edit": "编辑资料",
     "deleteHint": "要删除「{{nickname}}」吗？",
     "self": "我",
     "selfHint1": "将「{{nickname}}」设定为我的暱称",
-    "selfHint2": "「{{nickname}}」不再是我的暱称"
+    "selfHint2": "「{{nickname}}」不再是我的暱称",
+    "friendPlaceholder": "好友 ID",
+    "friendHint": "使用者ID显示在系统设定中"
   },
   "share": {
     "join": "加入此帐本？",
