--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -42,8 +42,24 @@
     "head": "系统设定",
     "language": "语言设定",
     "myId": "我的 ID",
+    "dataTransfer": "资料转移",
     "add2HomeScreen": "加入手机主画面",
     "contactUs": "联络我们"
+  },
+  "transfer": {
+    "back": "回系统设定",
+    "head": "资料转移",
+    "outHead": "资料转出",
+    "outHint": "将密钥输入其他装置，可将此装置上的资料拷贝到新的装置上",
+    "outBtn": "产生密钥",
+    "inHead": "资料汇入",
+    "inHint": "输入其他装置的密钥即可汇入资料",
+    "inBtn": "输入密钥",
+    "modalOutHead": "密钥",
+    "modalOutHint": "此密钥将于 24 小时后失效",
+    "modalOutClose": "关闭",
+    "nodalOutCopy": "拷贝密钥",
+    "modalInLabel": "输入密钥"
   },
   "add2HomeScreen": {
     "back": "回系统设定",
