--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -137,7 +137,7 @@
     "selfHint1": "将「{{nickname}}」设定为我的暱称",
     "selfHint2": "「{{nickname}}」不再是我的暱称",
     "friendPlaceholder": "好友 ID",
-    "friendHint": "使用者ID显示在系统设定中"
+    "friendHint": "使用者ID显示在系统设定"
   },
   "share": {
     "join": "加入此帐本？",
