--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -19,7 +19,8 @@
     "sharer": "分摊者",
     "sender": "汇款者",
     "receiver": "收款者",
-    "memo": "备註"
+    "memo": "备註",
+    "copy": "複製成功！"
   },
   "landing": {
     "title": "Bunny Bill",
@@ -58,7 +59,7 @@
     "modalOutHead": "密钥",
     "modalOutHint": "此密钥将于 24 小时后失效",
     "modalOutClose": "关闭",
-    "modalOutCopy": "拷贝密钥",
+    "modalOutCopy": "複製密钥",
     "modalInLabel": "输入密钥"
   },
   "add2HomeScreen": {
