--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -9,7 +9,8 @@
     "reset": "重置",
     "clear": "清除",
     "back": "回上页",
-    "loadMore": "读取更多"
+    "loadMore": "读取更多",
+    "export": "汇出"
   },
   "desc": {
     "in": "收入",
@@ -20,7 +21,9 @@
     "sender": "汇款者",
     "receiver": "收款者",
     "memo": "备註",
-    "copy": "複製成功！"
+    "copy": "複製成功！",
+    "exportTitle": "汇出",
+    "exportHint": "将收支明细汇出成一个 pdf 档"
   },
   "landing": {
     "title": "Bunny Bill",
