fix payer/receiver text in history

--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -119,7 +119,8 @@
       "amount": "Amount",
       "memo": "Memo",
       "descr": "Item",
-      "former": "Payer",
+      "formerIn": "Receiver",
+      "formerOut": "Payer",
       "latter": "Sharer",
       "srcMemberId": "Sender",
       "dstMemberId": "Receiver"
