--- a/frontend/public/locale/zh-CN/common.json
+++ b/frontend/public/locale/zh-CN/common.json
@@ -97,13 +97,22 @@
     "back": "回帐本",
     "head": "设定",
     "bookName": "帐本名称",
-    "currency": "币别",
+    "currency": "币别设定",
     "deleteBook": "删除帐本",
     "showDeleted": "显示已删除帐目",
     "systemDeleteDate": "系统移除日期",
     "systemDeleteHint": "若此帐本累积 100 天未更新，则系统将自动移除此帐本所有资料。",
     "rename": "重新命名",
     "deleteHint": "此处仅能删除这台装置当中的记录，其他装置的记录不受影响"
+  },
+  "currencySetting": {
+    "back": "回设定",
+    "head": "币别设定",
+    "create": "新增",
+    "createCurrency": "新增币别",
+    "name": "名称",
+    "symbol": "符号",
+    "exchangeRate": "汇率"
   },
   "transaction": {
     "back": "回帐本",
