--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -72,10 +72,10 @@
     "head": "Data Transfer",
     "outHead": "Transfer Out",
     "outHint": "Enter the key into other devices to copy the data on this device to the new device.",
-    "outBtn": "Generate Key",
+    "outBtn": "Gen. Key",
     "inHead": "Transfer In",
     "inHint": "Enter the key from another device to import data.",
-    "inBtn": "Enter key",
+    "inBtn": "Enter",
     "modalOutHead": "Key",
     "modalOutHint": "The key will be expired in 24 hours",
     "modalOutClose": "Close",
