--- a/frontend/public/locale/en/common.json
+++ b/frontend/public/locale/en/common.json
@@ -109,7 +109,7 @@
     "shouldPay": "Should Pay",
     "deleted": "Deleted",
     "donateTitle": "Donate Us",
-    "donateNote": "Thanks for using Bunny Bill! If you like our current results, you can also sponsor us to provide better services."
+    "donateNote": "Thanks for using Bunny Bill! If you like our current results, you can donate us to provide better services."
   },
   "bookSetting": {
     "back": "Back",
