--- a/frontend/public/locale/zh-TW/common.json
+++ b/frontend/public/locale/zh-TW/common.json
@@ -109,7 +109,7 @@
     "shouldPay": "需還款",
     "deleted": "已刪除",
     "donateTitle": "支持我們",
-    "donateNote": "感謝您使用 Bunny Bill！如果您喜歡我們目前的成果，也可以通過贊助讓我們提供更完善的服務。"
+    "donateNote": "感謝您使用 Bunny Bill！如果您喜歡我們目前的成果，可以通過贊助讓我們提供更完善的服務。"
   },
   "bookSetting": {
     "back": "回帳本",
